tests/errors/se_conddef.pyx
if x:
	def h():
		pass
_ERRORS = u"""
/Local/Projects/D/Pyrex/Source/Tests/Errors1/se_conddef.pyx:2:1: def statement not allowed here
"""
